[package]
name = "cheap_alerts"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"
description = "A utility for sending text alerts via email"
license-file = "license.txt"
repository = "https://github.com/FreeMasen/cheap_alerts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
chrono = "0.4"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1"
